k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipfs-node
  labels:
    version: ${VERSION}
spec:
  selector:
    app: ipfs-node
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
    name: api
  - port: 8080
    targetPort: 8080
    name: gateway
    protocol: TCP
